2018-04-24 belangeo <belangeo@gmail.com>

    * Added a new object: MultiBand, frequency splitter using Linkwitz-Riley 
      crossover filters.

2018-03-04 belangeo <belangeo@gmail.com>

    * Added the ability to remove a project from the project tree.

2018-03-02 belangeo <belangeo@gmail.com>

    * Added getPrecision() function. Removed print statement when importing pyo.
      User should use getVersion() and getPrecision() functions if needed.

2018-03-02 belangeo <belangeo@gmail.com>

    * Fixed crash when asking for more input or output channels than available.

2018-02-16 belangeo <belangeo@gmail.com>

    * Added release-notes for version 0.9.0.

2018-02-16 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.9.0.

2018-02-16 belangeo <belangeo@gmail.com>

    * Added a Server.makenote(pitch, velocity, duration, channel=0) method.

2018-02-15 belangeo <belangeo@gmail.com>

    * Added a new object: MidiLinseg, a midi-triggered breakpoints envelope.

2018-02-13 belangeo <belangeo@gmail.com>

    * Added a new object: RMS, which return the rms value of an audio signal.

2018-02-13 belangeo <belangeo@gmail.com>

    * Added a new object: Expand, which expand the dynamic range of an audio signal.

2018-02-10 belangeo <belangeo@gmail.com>

    * HRTF impulse responses are now interpolated in the spectral domain to 
      avoid phase cancellation that occur in the time domain.

2018-02-03 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.8.9.

2018-02-03 belangeo <belangeo@gmail.com>

    * Added new object: HRTF, Head-Related Transfert Function 3D spatialization.

2018-02-01 belangeo <belangeo@gmail.com>

    * Fixed crash when trying to draw a ControlSlider with width or height of 0.

2018-01-31 belangeo <belangeo@gmail.com>

    * Fixed window shape in the Harmonizer object (use an halfsine instead 
      of an hanning).

2018-01-25 belangeo <belangeo@gmail.com>
