@@ -1,3 +1,7 @@
+2018-05-30 belangeo <belangeo@gmail.com>
+
+    * Fixed phase shifting between the frequency bands of FourBand and MultiBand.
+
 2018-04-24 belangeo <belangeo@gmail.com>
 
     * Added a new object: MultiBand, frequency splitter using Linkwitz-Riley 
